@@ -2,6 +2,7 @@ Revision history for Perl extension Text::CSV::R.
 
 0.1  Thu Aug 18 2010
     - code cleanup
+    - Bugfix: colnames wrong with row_names option 
 
 0.03 Thu Aug 18 2010
     - dec for writing
